--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -17,4 +17,7 @@
 
 @import "./components.d/buttons";
 @import "./components.d/tabs";
+@import "./components.d/input";
+@import "./components.d/checkbox";
+@import "./components.d/sliders";
 
