--- a/src/scss/_sections.scss
+++ b/src/scss/_sections.scss
@@ -5,4 +5,5 @@
 @import "./sections.d/price-list";
 @import "./sections.d/post-block";
 @import "./sections.d/consultation";
+@import "./sections.d/about";
 @import "./sections.d/content";
