--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -21,6 +21,7 @@
     --fz-title: 4.5rem;
 
     --fz-h2: 4rem;
+    --fz-h4: 2rem;
 
     @media (max-width: $laptop-md) {
         --fz-title: 4.5rem;
