--- a/src/scss/variables/colors.scss
+++ b/src/scss/variables/colors.scss
@@ -16,9 +16,9 @@
     --fg-title: #2B2B2B;
 
     // BGs
-    --bg-app: #F7F7F9;
+    --bg-app: #EEE9E3;
     --bg-section-light: #fff;
-    --bg-card: #fff;
+    --bg-card: #F7F4F1;
     --bg-card-dark: #383838;
 
     // nomads
