--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -30,8 +30,12 @@
 html,
 body {
   width: 100%;
-  height: 100%;
 }
+
+body {
+    height: 100%;
+}
+
 /*
     Typographic tweaks!
     4. Add accessible line-height
