--- a/src/scss/helper.d/utilities.scss
+++ b/src/scss/helper.d/utilities.scss
@@ -57,3 +57,27 @@
 .justify-content-start { justify-content: flex-start };
 .justify-content-end { justify-content: flex-end };
 .justify-content-center { justify-content: center };
+
+.w-100 {
+    width: 100%;
+}
+
+.mb-0 {
+    margin-bottom: 0 !important;
+}
+
+.mb-10 {
+    margin-bottom: 1rem !important;
+}
+
+.mb-20 {
+    margin-bottom: 2rem !important;
+}
+
+.mb-25 {
+    margin-bottom: 2.5rem !important;
+}
+
+.mb-30 {
+    margin-bottom: 3rem !important;
+}
