--- a/src/scss/sections.d/_consultation.scss
+++ b/src/scss/sections.d/_consultation.scss
@@ -20,4 +20,144 @@
     &__body {
         padding: 3.2rem 6rem 4.8rem 6rem;
     }
+
+    &__row {
+        display: flex;
+        column-gap: 6rem;
+    }
+
+    &__main {
+        flex-grow: 1;
+        color: var(--fg-second);
+    }
+
+    &__media {
+        width: 44rem;
+        flex-shrink: 0;
+    }
+
+    &__block {
+        border-radius: 4.2rem;
+        padding: 2rem 3rem 4rem 3rem;
+        background-color: rgba(238, 233, 227, 0.5);
+    }
+
+    &__info {
+        margin-top: 3.2rem;
+        display: flex;
+        column-gap: 1.5rem;
+        align-items: center;
+        justify-content: center;
+    }
+
+    &__tag {
+        color: #343434;
+        font-size: 1.8rem;
+        line-height: 2rem;
+        white-space: nowrap;
+        display: flex;
+        column-gap: .5rem;
+        align-items: center;
+
+        strong {
+            font-weight: 700;
+        }
+    }
+
+    &__icon {
+        width: 2.5rem;
+        height: 2.5rem;
+        display: block;
+        flex-shrink: 0;
+    }
+
+    &__image {
+        display: block;
+        overflow: hidden;
+        margin-bottom: 2.4rem;
+        border-radius: 2.5rem;
+    }
+
+    &__divider {
+        width: 2px;
+        height: 2.8rem;
+        background-color: #EBEBEB;
+    }
+
+    &__intro {
+        margin-bottom: 4.5rem;
+    }
+
+    &__title {
+        color: var(--fg-title);
+        font-weight: 700;
+        font-size: 3.2rem;
+        line-height: 3.2rem;
+        margin-bottom: 2rem;
+    }
+
+    &__roadmap {
+        list-style-type: none;
+        counter-reset: num;
+        margin: 0 0 2.2rem 0;
+        font-size: 1.6rem;
+        line-height: 140%;
+        display: flex;
+        row-gap: 1.35rem;
+        flex-direction: column;
+
+        li {
+            padding-left: 4rem;
+            position: relative;
+
+            &:before {
+                top: 0;
+                left: 0;
+                width: 2.5rem;
+                height: 2.5rem;
+                font-weight: 700;
+                font-size: 1.4rem;
+                line-height: 1.9rem;
+                color: whitesmoke;
+                border-radius: 50%;
+                position: absolute;
+                content: counter(num);
+                counter-increment: num;
+                background-color: var(--fg-title);
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+        }
+    }
+
+    &__lead {
+        font-size: 1.6rem;
+        line-height: 140%;
+        color: var(--fg-second);
+        padding: 2rem;
+        max-width: 34rem;
+        border-radius: 2rem;
+        margin-bottom: 2rem;
+        background-color: var(--bg-card);
+
+        &--md {
+            max-width: 39rem;
+        }
+
+    }
+
+    &__text {
+
+        &--md {
+            max-width: 39rem;
+        }
+
+        p {
+
+            &:not(:last-child) {
+                margin-bottom: 2rem;
+            }
+        }
+    }
 }
