--- a/src/scss/helper.d/utilities.scss
+++ b/src/scss/helper.d/utilities.scss
@@ -74,9 +74,12 @@
     margin-bottom: 0.5rem !important;
 }
 
-
 .mb-10 {
     margin-bottom: 1rem !important;
+}
+
+.mb-15 {
+    margin-bottom: 1.5rem !important;
 }
 
 .mb-20 {
