--- a/src/scss/sections.d/_content.scss
+++ b/src/scss/sections.d/_content.scss
@@ -102,12 +102,16 @@ h4 {
         margin-bottom: 1.5rem;
     }
 
-    &__text {
+    &__subtitle {
+        font-size: 1.5rem;
+        line-height: 1.9rem;
         color: var(--fg-second);
     }
 }
 
 .homepage {
+    max-width: 100%;
+    overflow: hidden;
     position: relative;
 
     &__body {
