--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -37,6 +37,7 @@
     @media (max-width: $tablet) {
         --fz-regular: 1rem;
         --fz-title: 2.5rem;
+        --fz-h2: 3.2rem;
     }
     @media (max-width: $mobile-xxs) {
         // --fz-regular: 1rem;
