--- a/src/scss/sections.d/_features.scss
+++ b/src/scss/sections.d/_features.scss
@@ -64,4 +64,41 @@
         display: block;
         flex-shrink: 0;
     }
+
+    @media (max-width: $tablet) {
+        grid-row-gap: 2rem;
+        grid-template-columns: 1fr;
+
+        &__item {
+            font-size: 1.5rem;
+            line-height: 120%;
+            min-height: 14.5rem;
+            padding: 2rem;
+            text-align: center;
+            border-radius: 2rem;
+
+            &:first-child {
+                border-radius: 2rem;
+            }
+
+            &:last-child {
+                border-radius: 2rem;
+            }
+
+            &:nth-child(2) {
+                border-radius: 2rem;
+
+                &:after,
+                &:before {
+                    display: none;
+                }
+            }
+        }
+
+        &__media {
+            width: 3.5rem;
+            height: 3.5rem;
+            margin: 0 auto 1.5rem auto;
+        }
+    }
 }
