--- a/src/scss/sections.d/_info.scss
+++ b/src/scss/sections.d/_info.scss
@@ -73,6 +73,7 @@
         border-radius: 3rem;
         padding: 1.5rem 1rem;
         display: flex;
+        align-items: center;
         column-gap: 1.7rem;
     }
 
@@ -118,6 +119,61 @@
 
         &--top {
             margin-top: -8.4rem;
+        }
+    }
+
+    @media (max-width: $tablet) {
+        padding: 3rem;
+
+        &__row {
+            row-gap: 2rem;
+            flex-direction: column;
+
+            &:first-child {
+                flex-direction: column-reverse;
+            }
+        }
+
+        &__question {
+            display: none;
+        }
+
+        &__header {
+            font-size: 2.8rem;
+            line-height: 110%;
+        }
+
+        &__col {
+
+            &:first-child {
+                width: 100%;
+                flex-shrink: 0;
+            }
+
+            &:last-child {
+                flex-grow: 1;
+            }
+
+            &--pt {
+                padding-top: 0;
+            }
+        }
+
+        &__text {
+            font-size: 1.6rem;
+            line-height: 160%;
+        }
+
+        &__footer {
+            grid-row-gap: 1.5rem;
+            grid-template-columns: 1fr;
+        }
+
+        &__expert {
+
+            &--top {
+                margin-top: 0;
+            }
         }
     }
 }
