--- a/src/scss/sections.d/_intro.scss
+++ b/src/scss/sections.d/_intro.scss
@@ -48,6 +48,10 @@
         line-height: 160%;
         color: var(--fg-second);
         margin-bottom: 4rem;
+
+        strong {
+            border-bottom: 1px dashed var(--c-primary);
+        }
     }
 
     &__order {
@@ -82,6 +86,53 @@
     &__info {
         color: #79B3CD;
     }
+
+    @media (max-width: $tablet) {
+        flex-direction: column;
+        padding-bottom: 8rem;
+
+        &__button {
+            width: 24rem;
+        }
+
+        &__label {
+
+            br {
+            //    display: none;
+            }
+        }
+
+        &__media {
+            width: 44.4rem;
+            margin: 0 auto;
+        }
+
+        &__person {
+            column-gap: 1rem;
+            font-size: 1.2rem;
+            height: 4.2rem;
+            right: 12rem;
+            bottom: 5rem;
+
+            &:before {
+                width: 1.5rem;
+                height: 1.5rem;
+            }
+        }
+
+        &__order {
+            margin-bottom: 0;
+        }
+
+        &__notice {
+            left: 0;
+            right: 0;
+            z-index: 50;
+            bottom: 2rem;
+            text-align: center;
+            position: absolute;
+        }
+    }
 }
 
 .intro-header {
@@ -101,14 +152,18 @@
         position: relative;
 
         &:before {
+            top: 1.8rem;
             bottom: 0.2rem;
             left: -1rem;
             right: -1rem;
-            height: 6rem;
             content: '';
             border-radius: 80px;
             position: absolute;
             border: 0.2rem solid var(--c-primary);
         }
+    }
+
+    @media (max-width: $tablet) {
+        font-size: 5.8rem;
     }
 }
