--- a/src/scss/sections.d/about.scss
+++ b/src/scss/sections.d/about.scss
@@ -71,6 +71,48 @@
     .list-point {
         line-height: 160% !important;
     }
+
+    @media (max-width: $tablet) {
+        margin-bottom: 2rem;
+
+        &:before {
+            display: none;
+        }
+
+        &__main {
+            flex-direction: column;
+        }
+
+        &__header {
+            font-size: 3.2rem;
+        }
+
+        &__beige {
+            width: 100%;
+            padding: 3rem 4rem 4rem 4rem;
+            order: 1;
+        }
+
+        &__white {
+            margin: 0;
+            width: 100%;
+            padding: 3rem 4rem;
+            order: 3;
+        }
+
+        &__media {
+            width: 43rem;
+            order: 2;
+            margin: 0 auto;
+            left: auto;
+            bottom: auto;
+            position: relative;
+        }
+
+        .btn-primary {
+            width: 100%;
+        }
+    }
 }
 
 .about-docs {
@@ -126,8 +168,44 @@
         align-items: center;
     }
 
+    &__control {
+        display: none;
+    }
+
     .btn-primary {
 
+    }
+
+    @media (max-width: $tablet) {
+        padding: 3rem 4rem;
+        row-gap: 1.5rem;
+        align-items: inherit;
+        flex-direction: column;
+
+        &__content {
+            width: auto;
+            text-align: center;
+        }
+
+        &__title {
+            font-size: 2.8rem;
+            line-height: 2.8rem;
+        }
+
+        &__nav {
+            display: none;
+        }
+
+        &__media {
+            width: 100%;
+            flex-shrink: 0;
+        }
+
+        &__control {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
     }
 }
 
@@ -136,5 +214,14 @@
     .swiper-slide {
         width: 35rem;
         padding: 0 1rem;
+    }
+
+    @media (max-width: $tablet) {
+        overflow: visible;
+
+        .swiper-slide {
+            width: 40rem;
+            padding: 0 1rem;
+        }
     }
 }
