--- a/src/scss/sections.d/post-block.scss
+++ b/src/scss/sections.d/post-block.scss
@@ -27,6 +27,32 @@
         grid-column-gap: 2.8rem;
         grid-template-columns: 1fr 1fr;
     }
+
+    @media (max-width: $tablet) {
+        padding: 3rem 4rem;
+
+        &__avatar {
+            width: 8rem;
+            height: 8rem;
+            margin: 0 auto 1.3rem auto;
+        }
+
+        &__header {
+            font-size: 2.4rem;
+            line-height: 2.4rem;
+            margin-bottom: 2.5rem;
+        }
+
+        &__grid {
+            width: 100%;
+            grid-row-gap: 2rem;
+            grid-template-columns: 1fr;
+        }
+
+        .btn-outline-primary {
+            width: 100%;
+        }
+    }
 }
 
 .post {
@@ -107,6 +133,20 @@
             border-bottom-color: transparent;
             text-decoration: none;
             transition: var(--transition-time);
+        }
+    }
+
+
+    @media (max-width: $tablet) {
+
+        &__title {
+            font-size: 1.6rem;
+            line-height: 140%;
+        }
+
+        &__link {
+            font-size: 1.5rem;
+            line-height: 2.1rem;
         }
     }
 }
