--- a/src/scss/sections.d/price-list.scss
+++ b/src/scss/sections.d/price-list.scss
@@ -18,6 +18,7 @@
 
     &__item {
         display: flex;
+        column-gap: 1rem;
         align-items: center;
         justify-content: space-between;
 
@@ -76,6 +77,31 @@
             i {
                 transform: rotate(0deg);
                 transition: var(--transition-time);
+            }
+        }
+    }
+
+    @media (max-width: $tablet) {
+        padding: 3rem 4rem;
+        border: 1px solid rgba(0, 0, 0, 0.08);
+
+        &__main {
+            font-size: 1.3rem;
+            line-height: 132%;
+        }
+
+        &__content {
+            column-gap: 2rem;
+        }
+
+        &__item {
+
+            &:not(:first-child) {
+                padding-top: 1.5rem;
+            }
+
+            &:not(:last-child) {
+                padding-bottom: 1.5rem;
             }
         }
     }
