--- a/src/scss/components.d/_buttons.scss
+++ b/src/scss/components.d/_buttons.scss
@@ -14,6 +14,7 @@
     border-radius: 1.2rem;
     box-shadow: 0px 10.31px 1.99px -10.31px rgba(0, 0, 0, 0.9),0px 13.25px 6.55px -9.57px rgba(0, 0, 0, 0.25),0px 19.14px 11.71px -11.78px rgba(0, 0, 0, 0.25),inset 0px -21.35px 2.72px -20.62px rgba(0, 0, 0, 0.5),inset -20.62px -11.05px 2.72px -20.62px rgb(118, 199, 231),inset 20.62px -11.05px 2.72px -20.62px rgb(118, 199, 231),0px 2px 22.9px 0px rgba(101, 147, 165, 0.6);
     background: rgb(99, 158, 184);
+    text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.15);
 
     &:before {
         top: 0;
@@ -53,7 +54,11 @@
 
     @media (max-width: $tablet) {
         font-size: 1.4rem;
-        min-height: 5rem;
+        min-height: 6rem;
+    }
+
+    @media (max-width: $mobile) {
+        min-height: 6rem;
     }
 }
 
@@ -83,8 +88,12 @@
 
     @media (max-width: $tablet) {
         min-width: inherit;
-        font-size: 1.2rem;
-        min-height: 4.5rem;
+        font-size: 1.4rem;
+        min-height: 6rem;
+    }
+
+    @media (max-width: $mobile) {
+
     }
 }
 
@@ -165,5 +174,12 @@
                 height: 1.2rem;
             }
         }
+    }
+}
+
+.btn-send {
+
+    @media (max-width: $mobile) {
+        min-height: 4.4rem;
     }
 }
