--- a/src/scss/components.d/_navbar.scss
+++ b/src/scss/components.d/_navbar.scss
@@ -50,6 +50,7 @@
     }
 
     @media (max-width: $tablet) {
+        margin-bottom: 1.6rem;
 
         .swiper-wrapper {
             overflow: visible;
@@ -58,6 +59,14 @@
 
         &__button {
             font-size: 1.1rem;
+            padding: 1rem 2rem;
+        }
+    }
+
+    @media (max-width: $mobile) {
+
+        &__button {
+            font-size: 1.2rem;
             padding: 1rem 2rem;
         }
     }
