--- a/src/scss/components.d/_tabs.scss
+++ b/src/scss/components.d/_tabs.scss
@@ -3,7 +3,26 @@
     position: relative;
 
     &__header {
+        height: 5rem;
         display: none;
+        color: var(--c-primary);
+        font-weight: 700;
+        font-size: 1.5rem;
+        line-height: 2.4rem;
+        border-radius: 1rem;
+        padding: .5rem 1.6rem;
+        border: 1px solid var(--c-primary);
+
+        &:after {
+            width: 1rem;
+            height: 0.5rem;
+            content: '';
+            display: block;
+            background-image: url("data:image/svg+xml;base64,PHN2ZyB3aWR0aD0nMTAnIGhlaWdodD0nNScgdmlld0JveD0nMCAwIDEwIDUnIGZpbGw9J25vbmUnIHhtbG5zPSdodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2Zyc+PHBhdGggZD0nTTUgNUw5LjMzMDEzIDAuNUgwLjY2OTg3M0w1IDVaJyBmaWxsPScjNzlCM0NEJy8+PC9zdmc+");
+            background-position: 50% 50%;
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
     }
 
     &__content {
@@ -37,6 +56,63 @@
             color: var(--c-primary);
             border-bottom-color: var(--c-primary);
             transition: var(--transition-time);
+        }
+    }
+
+    @media (max-width: $mobile) {
+
+        &__header {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        &__content {
+            left: 0;
+            right: 0;
+            top: calc(100% - 1px);
+            padding: 1rem 0;
+            position: absolute;
+            row-gap: 2rem;
+            flex-direction: column;
+            background-color: white;
+            border-radius: 0 0 1rem 1rem;
+            border: 1px solid var(--c-primary);
+            opacity: 0;
+            visibility: hidden;
+        }
+
+        &__item {
+            height: auto;
+            opacity: 1;
+            color: var(--c-primary);
+            font-size: 1.5rem;
+            line-height: 160%;
+            padding: .4rem 1.6rem;
+            border-bottom: none;
+            justify-content: flex-start;
+            transition: none;
+
+            &.active {
+                font-weight: 700;
+                text-decoration: underline;
+            }
+        }
+
+        &.open {
+
+            .tabs-nav__content {
+                opacity: 1;
+                visibility: visible;
+            }
+
+            .tabs-nav__header {
+                border-radius: 1rem 1rem 0 0;
+
+                &:after {
+                    transform: rotate(180deg);
+                }
+            }
         }
     }
 }
