--- a/src/scss/sections.d/_content.scss
+++ b/src/scss/sections.d/_content.scss
@@ -54,6 +54,30 @@ h4 {
     }
 }
 
+.list-line {
+    font-size: 1.6rem;
+    line-height: 140%;
+    display: flex;
+    row-gap: 1.35rem;
+    flex-direction: column;
+
+    li {
+        position: relative;
+        padding-left: 2rem;
+
+        &:before {
+            top: 0;
+            left: 0;
+            content: '—';
+            position: absolute;
+        }
+    }
+
+    @media (max-width: $tablet) {
+        font-size: 1.4rem;
+    }
+}
+
 .swiper-pagination {
     font-size: 0;
     line-height: 0;
@@ -61,6 +85,14 @@ h4 {
     column-gap: 1.3rem;
     align-items: center;
     justify-content: center;
+
+    @media (max-width: $tablet) {
+        column-gap: 1.1rem;
+    }
+
+    @media (max-width: $mobile) {
+        column-gap: 0.8rem;
+    }
 }
 
 .swiper-pagination-bullet {
@@ -72,6 +104,11 @@ h4 {
     border-radius: 50%;
     position: relative;
     background-color: #E6E6E6;
+
+    @media (max-width: $tablet) {
+        width: 0.8rem;
+        height: 0.8rem;
+    }
 }
 
 .swiper-pagination-bullet-active {
@@ -86,6 +123,16 @@ h4 {
         top: calc(50% - 0.9rem);
         left: calc(50% - 0.9rem);
         border: 1px solid var(--c-primary);
+    }
+
+    @media (max-width: $tablet) {
+
+        &:before {
+            width: 1.4rem;
+            height: 1.4rem;
+            top: calc(50% - 0.7rem);
+            left: calc(50% - 0.7rem);
+        }
     }
 }
 
@@ -104,7 +151,16 @@ h4 {
         column-gap: 1.6rem;
 
         &__item {
-            width: calc(50% - 0.8rem)
+            width: calc(50% - 0.8rem);
+        }
+    }
+
+    @media (max-width: $mobile) {
+        row-gap: 1.5rem;
+        flex-direction: column;
+
+        &__item {
+            width: 100%;
         }
     }
 }
@@ -134,6 +190,21 @@ h4 {
         &__subtitle {
             font-size: 1.3rem;
             line-height: 1.7rem;
+        }
+    }
+
+    @media (max-width: $mobile) {
+        margin-bottom: 2rem;
+
+        &__title {
+            font-size: 2.4rem;
+            line-height: 90%;
+            margin-bottom: 1rem;
+        }
+
+        &__subtitle {
+            font-size: 1.4rem;
+            line-height: 2.2rem;
         }
     }
 }
