--- a/src/scss/sections.d/_essential.scss
+++ b/src/scss/sections.d/_essential.scss
@@ -53,7 +53,6 @@
 
         &__header {
             font-size: 3.4rem;
-            text-align: center;
             line-height: 90%;
         }
 
@@ -67,6 +66,19 @@
             max-width: inherit;
             font-size: 1.4rem;
             line-height: 160%;
+        }
+    }
+
+    @media (max-width: $mobile) {
+
+        &__content {
+            padding: 2rem 1.5rem;
+        }
+
+        &__header {
+            font-size: 2.1rem;
+            line-height: 90%;
+            margin-bottom: 1.5rem;
         }
     }
 }
