--- a/src/scss/sections.d/_header.scss
+++ b/src/scss/sections.d/_header.scss
@@ -105,10 +105,11 @@
         left: 0;
         right: 0;
         bottom: 0;
+        overflow-y: auto;
         padding: 12rem 4rem 3rem;
         position: fixed;
         background-color: white;
-        transform: translateY(-100%);
+        transform: translateY(-100vh);
         transition: all 0.45s var(--tr-jolly-enter);
 
         &__nav {
