--- a/src/scss/sections.d/_intro.scss
+++ b/src/scss/sections.d/_intro.scss
@@ -87,19 +87,23 @@
         color: #79B3CD;
     }
 
+    &__image {
+
+        &--sm {
+            display: none;
+        }
+    }
+
     @media (max-width: $tablet) {
         flex-direction: column;
         padding-bottom: 8rem;
 
-        &__button {
-            width: 24rem;
+        &__main {
+            padding-top: 4rem;
         }
 
-        &__label {
-
-            br {
-            //    display: none;
-            }
+        &__button {
+            width: 24rem;
         }
 
         &__media {
@@ -107,11 +111,22 @@
             margin: 0 auto;
         }
 
+        &__image {
+
+            &--sm {
+                display: block;
+            }
+
+            &--xl {
+                display: none;
+            }
+        }
+
         &__person {
             column-gap: 1rem;
             font-size: 1.2rem;
             height: 4.2rem;
-            right: 12rem;
+            right: 10rem;
             bottom: 5rem;
 
             &:before {
@@ -133,6 +148,54 @@
             position: absolute;
         }
     }
+
+    @media (max-width: $mobile) {
+
+        &__main {
+            padding-bottom: 1.8rem;
+        }
+
+        &__lead {
+            font-size: 1.5rem;
+            line-height: 160%;
+            margin-bottom: 1.8rem;
+        }
+
+        &__order {
+            row-gap: 1.6rem;
+            flex-direction: column;
+        }
+
+        &__button {
+            width: 100%;
+        }
+
+        &__label {
+            font-size: 1.3rem;
+            text-align: center;
+
+            br {
+                display: none;
+            }
+        }
+
+        &__media {
+            width: 100%;
+            max-width: 44.4rem;
+            margin: 0 auto;
+        }
+
+        &__person {
+            height: 4.3rem;
+            right: 6rem;
+            bottom: 4rem;
+
+            &:before {
+                width: 1.5rem;
+                height: 1.5rem;
+            }
+        }
+    }
 }
 
 .intro-header {
@@ -141,7 +204,7 @@
     font-weight: 700;
     font-size: 6.3rem;
     line-height: 90%;
-    margin-bottom: 1.7rem;
+    margin: 0 0 1.7rem 0;
 
     &__row {
         display: block;
@@ -165,5 +228,19 @@
 
     @media (max-width: $tablet) {
         font-size: 5.8rem;
+    }
+
+    @media (max-width: $mobile) {
+        font-size: 3.5rem;
+
+        &__lead {
+
+            &:before {
+                top: 1rem;
+                bottom: 0.2rem;
+                left: -0.5rem;
+                right: -0.5rem;
+            }
+        }
     }
 }
