--- a/src/scss/sections.d/_section.scss
+++ b/src/scss/sections.d/_section.scss
@@ -24,10 +24,24 @@
         &__header {
             font-size: 3.2rem;
             line-height: 3.2rem;
-            margin-bottom: 2rem;
+            margin-bottom: 2.2rem;
 
             &--news {
                 margin-bottom: 3.5rem;
+            }
+        }
+    }
+
+    @media (max-width: $mobile) {
+        margin-bottom: 4rem;
+
+        &__header {
+            font-size: 2.4rem;
+            line-height: 2.4rem;
+            margin-bottom: 2.2rem;
+
+            &--news {
+                margin-bottom: 3rem;
             }
         }
     }
