--- a/src/scss/sections.d/_step.scss
+++ b/src/scss/sections.d/_step.scss
@@ -9,6 +9,10 @@
         row-gap: 2rem;
         margin-bottom: 4rem;
     }
+
+    @media (max-width: $mobile) {
+        margin-bottom: 2.4rem;
+    }
 }
 
 .step-item {
@@ -115,6 +119,26 @@
         &__header {
             font-size: 2.8rem;
             line-height: 110%;
+        }
+    }
+
+    @media (max-width: $mobile) {
+        padding: 2rem 1.5rem;
+
+        &:before {
+            font-size: 15.2rem;
+            line-height: 110%;
+        }
+
+        &__header {
+            font-size: 2rem;
+            line-height: 2.2rem;
+            margin-bottom: 1rem;
+        }
+
+        &__text {
+            font-size: 1.4rem;
+            line-height: 160%;
         }
     }
 }
