--- a/src/scss/sections.d/_news.scss
+++ b/src/scss/sections.d/_news.scss
@@ -132,4 +132,10 @@
 
 .news-btn-read {
     min-width: 38.8rem;
+
+
+    @media (max-width: $mobile) {
+        min-width: inherit;
+        width: 100%;
+    }
 }
