--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -19,4 +19,5 @@
 @import "./components.d/checkbox";
 @import "./components.d/sliders";
 @import "./components.d/modal";
+@import "./components.d/item-info";
 
