--- a/src/scss/sections.d/_comment.scss
+++ b/src/scss/sections.d/_comment.scss
@@ -3,6 +3,7 @@
     row-gap: 1rem;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 2.4rem;
 
     &__item {
         height: 2.9rem;
@@ -42,4 +43,112 @@
     &__star {
         width: 5.3rem;
     }
+}
+
+.comments {
+    margin: 0 -.7rem;
+    position: relative;
+
+    &:after,
+    &:before {
+        top: 0;
+        bottom: 0;
+        content: '';
+        z-index: 20;
+        width: 1000px;
+        position: absolute;
+        background-color: rgba(246, 248, 250, 1);
+    }
+
+    &:after {
+        left: 100%;
+        opacity: .5;
+    }
+
+    &:before {
+        right: 100%;
+    }
+
+    &__scrollbar {
+        margin-top: 5.4rem;
+    }
+
+    &__pagination {
+        display: none;
+    }
+
+    @media (max-width: $tablet) {
+
+        &:after,
+        &:before {
+            display: none;
+        }
+
+        &__scrollbar {
+            margin-top: 2.4rem;
+        }
+    }
+
+    @media (max-width: $mobile) {
+
+        &__scrollbar {
+            display: none;
+        }
+
+        &__pagination {
+            margin-top: 2.4rem;
+            display: block;
+        }
+    }
+}
+
+[data-comments] {
+    overflow: visible;
+
+    .swiper-slide {
+        padding: 0 .7rem;
+    }
+
+    @media (max-width: $tablet) {
+
+        .swiper-slide {
+            width: 24rem;
+        }
+    }
+
+    @media (max-width: $mobile) {
+
+        .swiper-slide {
+            width: 100%;
+        }
+    }
+}
+
+[data-comments-scrollbar] {
+
+}
+
+
+.swiper-scrollbar-horizontal {
+    margin: 0 .7rem;
+    position: relative;
+
+    &:before {
+        left: 0;
+        right: 0;
+        bottom: 0;
+        height: 1px;
+        content: '';
+        display: block;
+        position: absolute;
+        background-color: rgba(121, 179, 205, 0.3);
+    }
+}
+
+.swiper-scrollbar-drag {
+    height: 3px;
+    z-index: 10;
+    cursor: pointer;
+    position: relative;
+    background-color: #79B3CD;
 }
