--- a/src/scss/sections.d/_info.scss
+++ b/src/scss/sections.d/_info.scss
@@ -109,6 +109,15 @@
                 margin-bottom: 2.4rem;
             }
         }
+
+        a {
+            cursor: pointer;
+            text-decoration: underline;
+
+            &:hover {
+                text-decoration: none;
+            }
+        }
     }
 
     &__expert {
