--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -123,9 +123,9 @@ body._lock {
 }
 
 // Библиотеки
-@import "./libs/vanilla-datepicker";
+// @import "./libs/vanilla-datepicker";
 // @import "./libs/swiper";
-@import "./libs/flatpickr.min";
+// @import "./libs/flatpickr.min";
 @import "./libs/fancybox";
 
 
