--- a/src/scss/sections.d/_features.scss
+++ b/src/scss/sections.d/_features.scss
@@ -65,6 +65,13 @@
         flex-shrink: 0;
     }
 
+    &__text {
+
+        p {
+            margin: 0;
+        }
+    }
+
     @media (max-width: $tablet) {
         grid-row-gap: 2rem;
         grid-template-columns: 1fr;
