--- a/src/scss/sections.d/_step.scss
+++ b/src/scss/sections.d/_step.scss
@@ -1,17 +1,84 @@
 .steps {
-    display: flex;
-    row-gap: 4rem;
-    flex-direction: column;
-    counter-reset: num;
+    //display: flex;
+    //row-gap: 4rem;
+    //flex-direction: column;
+    //counter-reset: num;
     margin-bottom: 6.7rem;
 
+    &__header {
+        margin-bottom: 5rem;
+        display: flex;
+        align-items: flex-end;
+        justify-content: space-between;
+    }
+
+    &__title {
+        font-weight: 700;
+        font-size: 4rem;
+        line-height: 4rem;
+        font-family: var(--ff-secondary)
+    }
+
+    &__nav {
+        display: flex;
+        align-items: center;
+        column-gap: 1rem;
+        align-items: center;
+        justify-content: flex-end;
+    }
+
+    &__control {
+        margin-top: 6rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    &__nav-sm {
+        display: none;
+    }
+
     @media (max-width: $tablet) {
-        row-gap: 2rem;
-        margin-bottom: 4rem;
+        //row-gap: 2rem;
+        margin-bottom: 3rem;
+
+        &__header {
+            margin-bottom: 2.2rem;
+        }
+
+        &__title {
+            font-size: 3.2rem;
+            line-height: 3.2rem;
+        }
+
+        &__control {
+            margin-top: 3rem;
+        }
+
+        &__nav {
+            display: none;
+        }
+
+        &__nav-sm {
+            display: block;
+        }
+
+        &__control {
+            justify-content: space-between;
+        }
     }
 
     @media (max-width: $mobile) {
         margin-bottom: 2.4rem;
+
+        &__title {
+            font-size: 2.4rem;
+            line-height: 2.4rem;
+        }
+
+        &__pagination {
+            margin-top: 3rem;
+        }
     }
 }
 
@@ -23,6 +90,20 @@
     padding: 4rem 8rem 5rem 5.8rem;
 
     &:before {
+        //left: 4rem;
+        //top: 6.5rem;
+        //opacity: .03;
+        //color: black;
+        //z-index: 1;
+        //font-size: 35rem;
+        //line-height: 110%;
+        //position: absolute;
+        //content: counter(num);
+        //counter-increment: num;
+        //font-family: var(--ff-title);
+    }
+
+    &__num {
         left: 4rem;
         top: 6.5rem;
         opacity: .03;
@@ -99,6 +180,13 @@
             font-size: 20rem;
         }
 
+        &__num {
+            top: -1rem;
+            left: auto;
+            right: 1rem;
+            font-size: 20rem;
+        }
+
         &__top {
             display: none;
         }
@@ -126,6 +214,11 @@
         padding: 2rem 1.5rem;
 
         &:before {
+            font-size: 15.2rem;
+            line-height: 110%;
+        }
+
+        &__num {
             font-size: 15.2rem;
             line-height: 110%;
         }
