--- a/src/scss/sections.d/_comment.scss
+++ b/src/scss/sections.d/_comment.scss
@@ -77,6 +77,10 @@
         display: none;
     }
 
+    &__item {
+        display: block;
+    }
+
     @media (max-width: $tablet) {
 
         &:after,
