--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -99,7 +99,7 @@ body._lock {
     display: flex;
     flex-direction: column;
     width: 100%;
-    min-height: 100%;
+    min-height: 100vh;
 }
 .wrapper > .content {
     position: relative;
