--- a/src/scss/sections.d/_essential.scss
+++ b/src/scss/sections.d/_essential.scss
@@ -45,6 +45,7 @@
 
     @media (max-width: $tablet) {
         padding: 0;
+        border-radius: 2rem;
 
         &__content {
             width: 100%;
@@ -70,6 +71,7 @@
     }
 
     @media (max-width: $mobile) {
+        border-radius: 2rem;
 
         &__content {
             padding: 2rem 1.5rem;
