--- a/src/scss/sections.d/about.scss
+++ b/src/scss/sections.d/about.scss
@@ -20,7 +20,7 @@
         justify-content: space-between;
     }
 
-    &__beige {
+    &__block-01 {
         margin-top: 5rem;
         width: 50rem;
         flex-shrink: 0;
@@ -40,7 +40,7 @@
         }
     }
 
-    &__white {
+    &__block-02 {
         margin-top: 5rem;
         color: var(--fg-second);
         width: 36rem;
@@ -87,14 +87,14 @@
             font-size: 3.2rem;
         }
 
-        &__beige {
+        &__block-01 {
             width: 100%;
             margin-top: 0;
             padding: 3rem 4rem 4rem 4rem;
             order: 1;
         }
 
-        &__white {
+        &__block-01 {
             margin: 0;
             width: 100%;
             padding: 3rem 4rem;
@@ -122,7 +122,7 @@
             margin-bottom: 1.3rem;
         }
 
-        &__beige {
+        &__block-01 {
             padding: 1.5rem 1.5rem 3.5rem 1.5rem;
         }
 
@@ -135,7 +135,7 @@
             position: relative;
         }
 
-        &__white {
+        &__block-01 {
             padding: 2.5rem 2rem 2.4rem 1.5rem;
         }
     }
@@ -169,8 +169,20 @@
     }
 
     &__media {
+        position: relative;
         width: calc(100% - 27rem);
         flex-shrink: 0;
+
+        &:before {
+            top: 0;
+            left: 0;
+            bottom: 0;
+            z-index: 10;
+            content: '';
+            width: 4rem;
+            position: absolute;
+            background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 43%, rgba(255,255,255,0) 100%);
+        }
     }
 
     &__title {
